[package]
name = "sharing_server"
version = "0.2.0"
edition = "2021"
description = "Serveur web simple pour partager des connexions via QR codes"
license = "MIT"
authors = ["Votre Nom <email@example.com>"]

[dependencies]
actix-web = { version = "4.0", features = ["default"] }
actix-multipart = "0.6"
futures-util = "0.3"
if-addrs = "0.14.0"
qrcode-generator = "5.0.0"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1